push prima di sistemare i search